added image and centered inner column

--- a/index.html
+++ b/index.html
@@ -17,7 +17,19 @@
     
     <section>
         <div class ="inner-column">
-            <h2>This website is awesome</h2>
+            <pane>
+                <text-content>
+                    <h2>This website is awesome</h2>
+
+                    <p>Tis website has some subtext that will go here under the main title</p>
+
+                    <button class="sign-up">Sign up</button>
+                </text-content>
+
+                <picture>
+                    <img src="logo.png" alt ="TOP logo">
+                </picture>
+            </pane>
         </div>
 
     </section>
