--- a/index.html
+++ b/index.html
@@ -1,69 +1,69 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Landing Page</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <header>
-    <div class ="inner-column">
-    <h1>Header Logo</h1>
-    </div>
-  </header>
+<html>
+    <head>
+        <link rel="stylesheet" href="style.css"/>
+        <title>Odin Landing Page</title>
+        <meta charset="utf-8">
+    </head>
 
-  <main>
-    
-    <section>
-        <div class ="inner-column">
-            <pane>
-                <text-content>
-                    <h2>This website is awesome</h2>
-
-                    <p>Tis website has some subtext that will go here under the main title</p>
-
-                    <button class="sign-up">Sign up</button>
-                </text-content>
-
-                <picture>
-                    <img src="logo.png" alt ="TOP logo">
-                </picture>
-            </pane>
+    <body>
+        <div class="top">
+            <div class="header">
+                <p class="logo">Header Logo</p>
+                <div class="links">
+                    <a href="#">header link one</a>
+                    <a href="#">header link two</a>
+                    <a href="#">header link three</a>
+                </div>
+            </div>
+            <div class="first">
+                <div class="first-container">
+                    <h1 class="first-header">This website is awesome</h1>
+                    <p class="first-header-subtext">This website has some subtext that goes under the main title. It's a smaller font and the color is lower contrast</p>
+                    <button class="first-button">Sign up</button>
+                </div>
+                <div class="placeholder">
+                <p >this is a placeholder for an image</p>
+                </div>
+            </div>
+        </div>
+        <div class="second">
+            <h1 class="second-header">Some random information</h1>
+            <div class="images-second">
+                <div class="image-subtext">
+                    <img src="./space 1.jpeg">
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                <div class="image-subtext">
+                    <img src="./space2.jpeg">
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                <div class="image-subtext">
+                    <img src="./space3.jpeg">
+                    <p>this is some subtext under an illustration or image</p>  
+                </div>
+                <div class="image-subtext">
+                    <img src="./space4.jpeg">
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+            </div>
         </div>
 
-    </section>
-
-    <section>
-        <div class ="inner-column">
-            <h2>Some random information</h2>
+        <div class="third">
+            <p class="quote">I am Groot</p>
+            <p class="quoter">-Groot</p>
         </div>
 
-    </section>
+        <div class="fourth">
+            <div class="fourth-text">
+                <p  class="fourth-header">Call to action! It's time!</p>
+                <p class="fourth-subtext">Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <button class="fourth-button"> Sign-up</button>
 
-    <section>
-        <div class ="inner-column">
-            <h2>Inspiring quote</h2>
         </div>
-
-    </section>
-
-    <section>
-        <div class ="inner-column">
-            <h2>Call to action</h2>
+        <div class="footer">
+            <p> Copyright © The Odin Project 2021 </p>
         </div>
-
-    </section>
-
-  </main>
-
-  <footer>
-    <div class ="inner-column">
-        <h2>footer</h2>
-    </div>
-
-  </footer>
-
-
-</body>
+    </body>
 </html>
